fix: fix behaviour of caps-lock and shift buttons

--- a/src/view/keyboard.scss
+++ b/src/view/keyboard.scss
@@ -65,9 +65,9 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: 0.4s all;
+    transition: 0.2s all;
     &:hover {
-      background: crimson;
+      background: blue;
     }
     &_backspace {
       width: 104px;
@@ -107,4 +107,9 @@ span {
   font-size: 16px;
   font-weight: 700;
   line-height: 16px;
+}
+
+.pressed {
+  background: blue;
+  border-radius: 50px;
 }
